crates/memtrack/tests/snapshots/cpp_tests__alloc_cpp_tcmalloc_static.snap
---
source: crates/memtrack/tests/cpp_tests.rs
expression: formatted_events
---
[
    "Malloc { size: 44444 }",
    "Free",
    "Malloc { size: 8 }",
    "Free",
    "Malloc { size: 88888 }",
    "AlignedAlloc { size: 32768 }",
    "Free",
]
